fixed word wrap

--- a/client/src/components/Chat/Chat.scss
+++ b/client/src/components/Chat/Chat.scss
@@ -16,6 +16,8 @@
     .Chat-header {
       font-size: 1.5rem;
       font-weight: 600;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
     .exit-btn {
       button {
@@ -71,6 +73,8 @@
           color: #000;
           word-wrap: break-word;
           overflow-wrap: break-word;
+          width: auto;
+          max-width: calc(100% - 1rem);
         }
         &[is-current-user] {
           width: calc(100% - 1rem);
